# CoinUtils

./: .appveyor.yml  .dockerignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CoinBuild.cpp  CoinDenseVector.cpp  CoinError.cpp  CoinFactorization1.cpp  CoinFactorization2.cpp  CoinFactorization3.cpp  CoinFactorization4.cpp  CoinFileIO.cpp  CoinIndexedVector.cpp  CoinLpIO.cpp  CoinMessage.cpp  CoinMessageHandler.cpp  CoinModel.cpp  CoinModelUseful.cpp  CoinModelUseful2.cpp  CoinMpsIO.cpp  CoinPackedMatrix.cpp  CoinPackedVector.cpp  CoinPackedVectorBase.cpp  CoinPostsolveMatrix.cpp  CoinPrePostsolveMatrix.cpp  CoinPresolveDoubleton.cpp  CoinPresolveDual.cpp  CoinPresolveDupcol.cpp  CoinPresolveEmpty.cpp  CoinPresolveFixed.cpp  CoinPresolveForcing.cpp  CoinPresolveHelperFunctions.cpp  CoinPresolveImpliedFree.cpp  CoinPresolveIsolated.cpp  CoinPresolveMatrix.cpp  CoinPresolvePsdebug.cpp  CoinPresolveSingleton.cpp  (+22 more)
.ci/: Makefile
.coin-or/: Dependencies  config.yml  generate_readme  projDesc.xml  projDesc.yml
CoinBase/: CoinFactorization1.cpp  CoinFactorization4.cpp  CoinIndexedVector.hpp  CoinModelUseful.cpp  CoinModelUseful2.cpp  CoinPresolveDual.cpp  CoinPresolveDupcol.cpp  CoinPresolvePsdebug.cpp  CoinPresolveSubst.cpp  CoinUtility.hpp  configure  configure.ac
CoinBase/src/: CoinError.hpp  CoinFactorization2.cpp  CoinFactorization3.cpp  CoinFactorization4.cpp  CoinFileIO.cpp  CoinFloatEqual.hpp  CoinHelperFunctions.hpp  CoinModel.hpp  CoinMpsIO.cpp  CoinPackedMatrix.cpp  CoinPackedVectorBase.cpp  CoinPackedVectorBase.hpp  CoinPresolveDual.hpp  CoinPresolveDupcol.hpp  CoinSignal.hpp  CoinTypes.hpp  CoinWarmStartBasis.cpp  CoinWarmStartDual.cpp  Coin_C_defines.h  Makefile.am  Makefile.in
CoinBaseSrc/: CoinBuild.cpp  CoinFinite.hpp  CoinLpIO.hpp  CoinPackedVector.cpp  CoinPragma.hpp  CoinPresolveFixed.hpp  CoinPresolveForcing.hpp  CoinPresolveUseless.hpp  CoinTime.hpp  CoinWarmStartBasis.cpp
CoinUtils/: AUTHORS  CMakeLists.txt  Dependencies  INSTALL  Makefile.am  Makefile.in  README  coinutils-uninstalled.pc.in  coinutils.pc.in  coinutils_addlibs.txt.in  config_coinutils.h.cmake.in  configure  configure.ac  get.dependencies.sh
CoinUtils/MSVisualStudio/v10/libCoinUtils/: libCoinUtils.vcxproj
CoinUtils/MSVisualStudio/v10/unitTestCoinUtils/: unitTestCoinUtils.vcxproj
CoinUtils/MSVisualStudio/v10alt/: CoinUtilsUnitTest.vcxproj  coinutils.props  libCoinUtils.vcxproj
CoinUtils/MSVisualStudio/v14/libCoinUtils/: libCoinUtils.vcxproj
CoinUtils/MSVisualStudio/v16/libCoinUtils/: libCoinUtils.sln  libCoinUtils.vcxproj
CoinUtils/MSVisualStudio/v17/: CoinUtils.sln
CoinUtils/MSVisualStudio/v17/CoinUtilsUnitTest/: CoinUtilsUnitTest.vcxproj
CoinUtils/MSVisualStudio/v17/libCoinUtils/: libCoinUtils.vcxproj
CoinUtils/MSVisualStudio/v6/: CoinUtils.dsw  CoinUtils.opt
CoinUtils/MSVisualStudio/v6/libCoinUtils/: libCoinUtils.dsp
CoinUtils/MSVisualStudio/v6/unitTestCoinUtils/: unitTestCoinUtils.dsp
CoinUtils/MSVisualStudio/v7/: CoinUtils.sln
CoinUtils/MSVisualStudio/v7/libCoinUtils/: libCoinUtils.vcproj
CoinUtils/MSVisualStudio/v7/unitTestCoinUtils/: unitTestCoinUtils.vcproj
CoinUtils/MSVisualStudio/v8/libCoinUtils/: libCoinUtils.vcproj
CoinUtils/MSVisualStudio/v8/unitTestCoinUtils/: unitTestCoinUtils.ncb  unitTestCoinUtils.vcproj
CoinUtils/MSVisualStudio/v9/: CoinUtils.sln
CoinUtils/MSVisualStudio/v9/libCoinUtils/: libCoinUtils.vcproj
CoinUtils/MSVisualStudio/v9/unitTestCoinUtils/: unitTestCoinUtils.vcproj
CoinUtils/MSVisualStudio/v9alt/: CoinUtils.sln  CoinUtils.vcproj  CoinUtilsUnitTest.vcproj  genDefForCoinUtils.ps1  libCoinUtils.vcproj
CoinUtils/inc/: config.h.in  config_coinutils.h.in  config_coinutils_default.h  config_default.h
CoinUtils/m4/: ac_coinutils_inttypes.m4  ac_coinutils_mempool.m4  ac_coinutils_threads.m4
CoinUtils/src/: CoinAdjacencyVector.cpp  CoinAdjacencyVector.hpp  CoinAlloc.cpp  CoinAlloc.hpp  CoinBuild.cpp  CoinBuild.hpp  CoinCliqueList.cpp  CoinConflictGraph.cpp  CoinConflictGraph.hpp  CoinDenseFactorization.cpp  CoinDenseFactorization.hpp  CoinDenseVector.cpp  CoinDenseVector.hpp  CoinDistance.hpp  CoinDynamicConflictGraph.cpp  CoinDynamicConflictGraph.hpp  CoinError.cpp  CoinError.hpp  CoinFactorization.hpp  CoinFactorization1.cpp  CoinFactorization2.cpp  CoinFactorization3.cpp  CoinFactorization4.cpp  CoinFileIO.cpp  CoinFileIO.hpp  CoinFinite.hpp  CoinFloatEqual.hpp  CoinHelperFunctions.hpp  CoinIndexedVector.cpp  CoinIndexedVector.hpp  CoinLpIO.cpp  CoinLpIO.hpp  CoinMessage.cpp  CoinMessage.hpp  CoinMessageHandler.cpp  CoinMessageHandler.hpp  CoinModel.cpp  CoinModel.hpp  CoinModelUseful.cpp  CoinModelUseful.hpp  (+110 more)
CoinUtils/test/: CMakeLists.txt  CoinDenseVectorTest.cpp  CoinErrorTest.cpp  CoinIndexedVectorTest.cpp  CoinMessageHandlerTest.cpp  CoinModelTest.cpp  CoinMpsIOTest.cpp  CoinPackedMatrixTest.cpp  CoinPackedVectorTest.cpp  CoinShallowPackedVectorTest.cpp  Makefile.am  Makefile.in  unitTest.cpp
Doxygen/: CoinAdjacencyVector_8hpp.html  CoinAdjacencyVector_8hpp__dep__incl.map  CoinAdjacencyVector_8hpp__dep__incl.md5  CoinAdjacencyVector_8hpp__incl.map  CoinAdjacencyVector_8hpp__incl.md5  CoinAdjacencyVector_8hpp_source.html  CoinAlloc_8hpp.html  CoinBuild_8hpp.html  (+1799 more)
src/: CMakeLists.txt  CoinAdjacencyVector.cpp  CoinAdjacencyVector.hpp  CoinBronKerbosch.cpp  CoinBronKerbosch.hpp  CoinBuild.cpp  CoinBuild.hpp  CoinCliqueExtender.cpp  CoinCliqueExtender.hpp  CoinCliqueList.cpp  CoinCliqueList.hpp  CoinCliqueSet.cpp  CoinCliqueSet.hpp  CoinConflictGraph.cpp  CoinConflictGraph.hpp  CoinCutPool.cpp  CoinCutPool.hpp  CoinDenseFactorization.cpp  CoinDenseFactorization.hpp  CoinDenseVector.cpp  CoinDenseVector.hpp  CoinDistance.hpp  CoinDynamicConflictGraph.cpp  CoinDynamicConflictGraph.hpp  CoinError.cpp  CoinFactorization.hpp  CoinFactorization1.cpp  CoinFactorization2.cpp  CoinFactorization3.cpp  CoinFactorization4.cpp  CoinFileIO.cpp  CoinFileIO.hpp  CoinFinite.cpp  CoinFinite.hpp  CoinFloatEqual.hpp  CoinHelperFunctions.hpp  CoinIndexedVector.cpp  CoinIndexedVector.hpp  CoinLpIO.cpp  CoinLpIO.hpp  (+94 more)
(+2242 files in other folders)
